--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "devbuild": "rd -r public\\scripts 2>null & tsc -p tsconfig-dev.json",
     "start": "http-server -p 3000 -c-1",
     "lint": "eslint src --ext .js --ext .ts",
-    "lint-fix": "eslint src --ext .js --ext .ts --fix"
+    "lint-fix": "eslint src --ext .js --ext .ts --fix",
+    "serv": "cd serv & http-server -p 3040 -c-1"
   },
   "author": "",
   "license": "ISC",
